--- a/weak7/LeftMenu.css
+++ b/weak7/LeftMenu.css
@@ -24,7 +24,7 @@ body {
 }
 
 .menu ul {
-    list-style: inside url(../img/bullet.png);
+    list-style: inside url(../images/img/bullet.png);
     box-shadow: 5px 5px 10px #000;
     border: 1px solid #000;
     width: 148px; 
